--- a/style.css
+++ b/style.css
@@ -1,50 +1,52 @@
-@charset "UTF-8";
+@charset "utf-8";
 
 * {
-    margin: 0;
-}
-
-header {
-    width: auto;
-    height: 200px;
-    margin: auto;
-    text-align: center;
-    background-color: aqua;
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
-    padding: 0px 0px 0px 10px;
-    background-color: black;
-    height: 30px;
+    background-color: rgb(63, 63, 63);
+    padding: 20px;
 }
 
-nav > h1 {
-    display: inline-block;
+nav > a { 
+    color: aquamarine;
+    padding: 10px;
+}
+
+header{
+    background-color: #4CAF50;
     color: white;
-    margin-right: 955px;
+    padding: 15px;
 }
 
-nav > a {
-    font-size: 1.5em;
-    color: white;
-    padding: 5px 5px 5px 5px;
-    text-decoration: none;
-}
-
-nav > a:hover {
-    color: red;
-    background-color: aqua;
-    border-radius: 5px;
-}
-
-main {
-    margin-top: 50px;
+header > p{
+    padding: 10px;
     text-align: center;
 }
 
-aside {
-    display: inline;
-    text-align: left;
+.container {
+    display: flex;
 }
 
+main {
+    background-color: whitesmoke;
+    padding: 1em;
+    height: 300px;
+}
 
+main > aside {
+    display: inline-block;
+    
+}
+
+section {
+    margin-bottom: 1em;
+}
+
+footer {
+    background-color: #f1f1f1;
+    text-align: center;
+    padding: 0.5em;
+  }
